# nanobind

./: CMakeLists.txt  nanobind-config.cmake.in  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: vcpkg.yml
cmake/: nanobind.cmake
docs/: building.rst  installing.rst  release.rst
src/: __init__.py
tests/: CMakeLists.txt
